appgw/azuredeploy.json
{
  "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "metadata": {
    "_generator": {
      "name": "bicep",
      "version": "0.4.63.48766",
      "templateHash": "15692692753802657657"
    }
  },
  "parameters": {
    "appGatewayName": {
      "type": "string"
    },
    "location": {
      "type": "string",
      "defaultValue": "[resourceGroup().location]"
    },
    "primaryVnetName": {
      "type": "string"
    },
    "primaryVnetResourceGroup": {
      "type": "string"
    },
    "domainCertificateData": {
      "type": "string"
    },
    "domainCertificatePassword": {
      "type": "secureString"
    },
    "primaryBackendEndFQDN": {
      "type": "string"
    }
  },
  "functions": [],
  "variables": {
    "appGatewayName_var": "[format('{0}-{1}', parameters('appGatewayName'), parameters('location'))]",
    "appGatewayPrimaryPip_var": "[format('{0}-pip', variables('appGatewayName_var'))]",
    "appGatewayPrimaryNSG_var": "[format('{0}-nsg', variables('appGatewayName_var'))]",
    "subnetName": "/subnets/AppGateway",
    "primarySubnetId": "[format('{0}{1}', resourceId(parameters('primaryVnetResourceGroup'), 'Microsoft.Network/virtualNetworks', parameters('primaryVnetName')), variables('subnetName'))]"
  },
  "resources": [
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2020-05-01",
      "name": "[variables('appGatewayPrimaryNSG_var')]",
      "location": "[parameters('location')]",
      "properties": {
        "securityRules": [
          {
            "name": "HealthProbes",
            "properties": {
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "65200-65535",
              "sourceAddressPrefix": "GatewayManager",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 100,
              "direction": "Inbound"
            }
          },
          {
            "name": "Allow_FrontDoor_TLS",
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "443",
              "sourceAddressPrefix": "AzureFrontDoor.Backend",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 110,
              "direction": "Inbound"
            }
          },
          {
            "name": "Allow_FrontDoor_HTTP",
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "80",
              "sourceAddressPrefix": "AzureFrontDoor.Backend",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 111,
              "direction": "Inbound"
            }
          },
          {
            "name": "Allow_AzureLoadBalancer",
            "properties": {
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "AzureLoadBalancer",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 120,
              "direction": "Inbound"
            }
          },
          {
            "name": "DenyAll",
            "properties": {
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 130,
              "direction": "Inbound"
            }
          }
        ]
      }
    },
    {
      "type": "Microsoft.Network/publicIPAddresses",
      "apiVersion": "2019-09-01",
      "name": "[variables('appGatewayPrimaryPip_var')]",
      "location": "[parameters('location')]",
      "sku": {
        "name": "Standard"
      },
      "properties": {
        "publicIPAddressVersion": "IPv4",
        "publicIPAllocationMethod": "Static"
      }
    },
    {
      "type": "Microsoft.Network/applicationGateways",
      "apiVersion": "2019-09-01",
      "name": "[variables('appGatewayName_var')]",
      "location": "[parameters('location')]",
      "properties": {
        "sku": {
          "name": "WAF_v2",
          "tier": "WAF_v2"
        },
        "gatewayIPConfigurations": [
          {
            "name": "appGatewayIpConfig",
            "properties": {
              "subnet": {
                "id": "[variables('primarySubnetId')]"
              }
            }
          }
        ],
        "sslCertificates": [
          {
            "name": "portal_us",
            "properties": {
              "data": "[parameters('domainCertificateData')]",
              "password": "[parameters('domainCertificatePassword')]"
            }
          }
        ],
        "trustedRootCertificates": [],
        "frontendIPConfigurations": [
          {
            "name": "appGwPublicFrontendIp",
            "properties": {
              "privateIPAllocationMethod": "Dynamic",
              "publicIPAddress": {
                "id": "[resourceId('Microsoft.Network/publicIPAddresses', variables('appGatewayPrimaryPip_var'))]"
              }
            }
          }
        ],
        "frontendPorts": [
          {
            "name": "port_80",
            "properties": {
              "port": 80
            }
          },
          {
            "name": "port_443",
            "properties": {
              "port": 443
            }
          }
        ],
        "backendAddressPools": [
          {
            "name": "apim",
            "properties": {
              "backendAddresses": [
                {
                  "fqdn": "[parameters('primaryBackendEndFQDN')]"
                }
              ]
            }
          }
        ],
        "backendHttpSettingsCollection": [
          {
            "name": "default",
            "properties": {
              "port": 80,
              "protocol": "Http",
              "cookieBasedAffinity": "Disabled",
              "pickHostNameFromBackendAddress": false,
              "affinityCookieName": "ApplicationGatewayAffinity",
              "requestTimeout": 20
            }
          },
          {
            "name": "https",
            "properties": {
              "port": 443,
              "protocol": "Https",
              "cookieBasedAffinity": "Disabled",
              "hostName": "[parameters('primaryBackendEndFQDN')]",
              "pickHostNameFromBackendAddress": false,
              "requestTimeout": 20,
              "probe": {
                "id": "[format('{0}/probes/APIM', resourceId('Microsoft.Network/applicationGateways', variables('appGatewayName_var')))]"
              }
            }
          }
        ],
        "httpListeners": [
          {
            "name": "default",
            "properties": {
              "frontendIPConfiguration": {
                "id": "[format('{0}/frontendIPConfigurations/appGwPublicFrontendIp', resourceId('Microsoft.Network/applicationGateways', variables('appGatewayName_var')))]"
              },
              "frontendPort": {
                "id": "[format('{0}/frontendPorts/port_80', resourceId('Microsoft.Network/applicationGateways', variables('appGatewayName_var')))]"
              },
              "protocol": "Http",
              "hostnames": [],
              "requireServerNameIndication": false
            }
          },
          {
            "name": "https",
            "properties": {
              "frontendIPConfiguration": {
                "id": "[format('{0}/frontendIPConfigurations/appGwPublicFrontendIp', resourceId('Microsoft.Network/applicationGateways', variables('appGatewayName_var')))]"
              },
              "frontendPort": {
                "id": "[format('{0}/frontendPorts/port_443', resourceId('Microsoft.Network/applicationGateways', variables('appGatewayName_var')))]"
              },
              "protocol": "Https",
              "sslCertificate": {
                "id": "[format('{0}/sslCertificates/portal_us', resourceId('Microsoft.Network/applicationGateways', variables('appGatewayName_var')))]"
              },
              "hostnames": [],
              "requireServerNameIndication": false
            }
          }
        ],
        "urlPathMaps": [],
        "requestRoutingRules": [
          {
            "name": "apim",
            "properties": {
              "ruleType": "Basic",
              "httpListener": {
                "id": "[format('{0}/httpListeners/https', resourceId('Microsoft.Network/applicationGateways', variables('appGatewayName_var')))]"
              },
              "backendAddressPool": {
                "id": "[format('{0}/backendAddressPools/apim', resourceId('Microsoft.Network/applicationGateways', variables('appGatewayName_var')))]"
              },
              "backendHttpSettings": {
                "id": "[format('{0}/backendHttpSettingsCollection/https', resourceId('Microsoft.Network/applicationGateways', variables('appGatewayName_var')))]"
              }
            }
          }
        ],
        "probes": [
          {
            "name": "APIM",
            "properties": {
              "protocol": "Https",
              "host": "[parameters('primaryBackendEndFQDN')]",
              "path": "/status-0123456789abcdef",
              "interval": 30,
              "timeout": 30,
              "unhealthyThreshold": 3,
              "pickHostNameFromBackendHttpSettings": false,
              "minServers": 0,
              "match": {
                "statusCodes": [
                  "200-399"
                ]
              }
            }
          }
        ],
        "rewriteRuleSets": [],
        "redirectConfigurations": [],
        "webApplicationFirewallConfiguration": {
          "enabled": true,
          "firewallMode": "Detection",
          "ruleSetType": "OWASP",
          "ruleSetVersion": "3.0",
          "disabledRuleGroups": [],
          "requestBodyCheck": true,
          "maxRequestBodySizeInKb": 128,
          "fileUploadLimitInMb": 100
        },
        "enableHttp2": true,
        "autoscaleConfiguration": {
          "minCapacity": 1,
          "maxCapacity": 2
        }
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/publicIPAddresses', variables('appGatewayPrimaryPip_var'))]",
        "[extensionResourceId(format('/subscriptions/{0}/resourceGroups/{1}', subscription().subscriptionId, parameters('primaryVnetResourceGroup')), 'Microsoft.Resources/deployments', 'apply-nsg-to-subnet-primary')]"
      ]
    },
    {
      "type": "Microsoft.Resources/deployments",
      "apiVersion": "2019-10-01",
      "name": "apply-nsg-to-subnet-primary",
      "resourceGroup": "[parameters('primaryVnetResourceGroup')]",
      "properties": {
        "expressionEvaluationOptions": {
          "scope": "inner"
        },
        "mode": "Incremental",
        "parameters": {
          "appGatewayName": {
            "value": "[parameters('appGatewayName')]"
          },
          "primaryVnetName": {
            "value": "[parameters('primaryVnetName')]"
          },
          "primarySubnetId": {
            "value": "[variables('primarySubnetId')]"
          }
        },
        "template": {
          "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
          "contentVersion": "1.0.0.0",
          "metadata": {
            "_generator": {
              "name": "bicep",
              "version": "0.4.63.48766",
              "templateHash": "6869409237426869566"
            }
          },
          "parameters": {
            "appGatewayName": {
              "type": "string"
            },
            "location": {
              "type": "string",
              "defaultValue": "[resourceGroup().location]"
            },
            "primaryVnetName": {
              "type": "string"
            },
            "primarySubnetId": {
              "type": "string"
            }
          },
          "functions": [],
          "variables": {
            "appGatewayNameFQDN": "[format('{0}-{1}', parameters('appGatewayName'), parameters('location'))]",
            "appGatewayPrimaryNSG": "[format('{0}-nsg', variables('appGatewayNameFQDN'))]",
            "subnetName": "/subnets/AppGateway"
          },
          "resources": [
            {
              "type": "Microsoft.Network/virtualNetworks/subnets",
              "apiVersion": "2020-06-01",
              "name": "[format('{0}{1}', parameters('primaryVnetName'), variables('subnetName'))]",
              "properties": {
                "addressPrefix": "[reference(parameters('primarySubnetId')).addressPrefix]",
                "networkSecurityGroup": {
                  "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('appGatewayPrimaryNSG'))]"
                }
              }
            }
          ]
        }
      }
    }
  ],
  "outputs": {
    "Primary_IP_Address": {
      "type": "string",
      "value": "[reference(resourceId('Microsoft.Network/publicIPAddresses', variables('appGatewayPrimaryPip_var'))).ipAddress]"
    }
  }
}
